# detect-sphere

./: CMakeLists.txt  Dockerfile  README.md  cluster.cpp  common.cpp  common.h  curve_fitting.cpp  fkresidual.h  main.cpp  pclmain.cpp  results.txt
ds-out/: results.csv  results.ods
src/: cluster.cpp  common.cpp  common.h
